# keyword-data-migration

./: .gitignore  Cargo.toml  LICENSE  Readme.md  main.rs  rustfmt.toml
.github/workflows/: rust.yml
src/: database_connection.rs  json_to_model_mapper.rs  keyword_service_gateway.rs  keyword_table.sql  lib.rs  main.rs  models.rs  schema.rs
src/keyword_service_gateway/: database_statistics.rs  http_pool.rs  keywords.rs  mod.rs  response_filter.rs
src/keywords/: mod.rs  model.rs  repository.rs  schema.rs
src/migration_statistics/: model.rs  repository.rs  schema.rs
src/resources/: keyword_table.sql
src/unused_keywords/: model.rs  repository.rs  schema.rs
