[package]
name = "keyword_data_migration"
version = "0.1.0"
authors = ["marcelolecar"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
tokio = { version = "0.2", features = ["full"] }
config = "0.9"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
cpython = "0.2"
mysql = "*"
log = "0.4"
simple_logger = "1.4.0"
diesel = { version = "1.0.0", features = ["mysql"] }
dotenv = "0.9.0"
r2d2 = "0.8.8"
r2d2_mysql="*"